Fix vertical alignment of TextInput in multiline mode

--- a/src/components/TextInput/TextInput.module.css
+++ b/src/components/TextInput/TextInput.module.css
@@ -4,11 +4,10 @@
 
 .TextInput input,
 .TextInput textarea {
-    @apply rounded-md shadow-sm border border-base py-2 px-3 w-full max-h-40;
+    @apply rounded-md shadow-sm border border-base py-2 px-3 w-full max-h-40 align-bottom resize-none;
     @apply outline-none focus:ring placeholder-text-muted;
     line-height: 20px;
     min-height: 40px;
-    resize: none;
 }
 
 .disabled input,
